@@ -62,6 +62,9 @@ JDO:     "CALL" OQL queries now work with Oracle stored functions
          and PostgreSQL stored functions returning instance
          (contributed by Rostislav Beloff <ros@domainforfree.com>)
 
+JDO:     Added type convertors BigDecimal <-> Boolean
+         (contributed by Markus Fritz <mfritz@justis.de>)
+
 
 Version 0.8.7  June 2, 2000
 ---------------------------
